src/test/ui/not-enough-arguments.stderr
error[E0061]: this function takes 4 parameters but 3 parameters were supplied
  --> $DIR/not-enough-arguments.rs:10:3
   |
LL | fn foo(a: isize, b: isize, c: isize, d:isize) {
   | --------------------------------------------- defined here
...
LL |   foo(1, 2, 3);
   |   ^^^^^^^^^^^^ expected 4 parameters

error: aborting due to previous error

For more information about this error, try `rustc --explain E0061`.
